# tg-odesli-bot

./: .deepsource.toml  .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  README.rst  azure-pipelines.yml  docker-compose.yml  junit.xml  pyproject.toml  requirements.txt  setup.cfg
.azure-pipelines/: azure-pipelines.yml  stage-build.yml  stage-lint.yml  stage-publish.yml  stage-test.yml
.github/workflows/: main.yml
group_songlink_bot/: __init__.py  bot.py  config.py  platforms.py  schemas.py
tests/: conftest.py  test_env  test_response.py
tests/integration/: test_bot.py
tests/unit/: test_bot.py  test_config.py
tg_odesli_bot/: __init__.py  __main__.py  bot.py  config.py  platforms.py  schemas.py  settings.py
