[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
default_section = "THIRDPARTY"
known_first_party = "tg_odesli_bot,tests"

[tool.pytest.ini_options]
junit_family = "xunit2"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
sqlite_cache = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[tool.coverage.run]
branch = true

[tool.pydocstyle]
# D202: No blank lines allowed after function docstring
# D203: 1 blank line required before class docstring
# D205: 1 blank line required between summary line and description
# D213: Multi-line docstring summary should start at the second line
# D400: First line should end with a period
# D415: First line should end with a period, question mark, or exclamation point
ignore = ["D202", "D203", "D205", "D213", "D400", "D415"]
match = ".*\\.py"


[tool.poetry]
name = "tg_odesli_bot"
version = "0.2.19"
description = "Telegram Bot to share music with Odesli (former Songlink) service."
repository = "https://github.com/9dogs/tg-odesli-bot"
homepage = "https://github.com/9dogs/tg-odesli-bot"
authors = ["Mikhail Knyazev <hellishbot@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
aiocache = "^0.11.1"
aiogram = "^2.21"
marshmallow = "^3.17.0"
python-dotenv = "^0.20.0"
sentry-sdk = "^1.8.0"
structlog = "^22.1.0"
structlog-sentry = "^1.4.0"
aiohttp = "^3.8.1"
ujson = "^5.4.0"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.0"
black = "^22.6"
isort = "^5.10.0"
flake8 = "^4.0.0"
flake8-bugbear = "^22.0.0"
flake8-comprehensions = "^3.2.2"
flake8-debugger = "^4.0.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.2.0"
flake8-todo = "^0.7"
pep8-naming = "^0.12.0"
pydocstyle = "^6.0.0"
coverage = "^6.0"
mypy = "^0.971"
pytest = "^7.0"
pytest-cov = "^3.0.0"
pytest-aiohttp = "^1.0"
pytest-timeout = "^2.0.0"
asynctest = "^0.13.0"
toml = "^0.10.2"

[tool.poetry.scripts]
tg-odesli-bot = "tg_odesli_bot.bot:main"
