[tool.poetry]
name = "tg_odesli_bot"
version = "0.3.4"
description = "Telegram Bot to share music with Odesli (former Songlink) service."
repository = "https://github.com/9dogs/tg-odesli-bot"
homepage = "https://github.com/9dogs/tg-odesli-bot"
authors = ["Mikhail Knyazev <hellishbot@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiocache = "^0.12.0"
aiogram = "<3"
python-dotenv = "^1.0.0"
sentry-sdk = "^2"
structlog = "^24.0.0"
structlog-sentry = "^2.0.0"
aiohttp = "^3"
ujson = "^5.4.0"
spotipy = "^2.22.1"
pydantic-core = "^2.0"
pydantic-settings = "^2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.0"
ruff = ">0.1"
coverage = "^7.0"
mypy = "^1.0"
pytest = "^8"
pytest-cov = "^6"
pytest-aiohttp = "^1.0"
pytest-timeout = "^2.0.0"
asynctest = "^0.13.0"
toml = "^0.10.2"

[tool.poetry.scripts]
tg-odesli-bot = "tg_odesli_bot.bot:main"

[tool.pytest.ini_options]
junit_family = "xunit2"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
sqlite_cache = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
plugins = "pydantic.mypy"

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "C4", # flake8-comprehensions
    "T10",  # flake8-debugger
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "Q",  # flake8-quotes
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "PL",  # Pylint
]
dummy-variable-rgx = "^__$"
ignore = [
    # Missing type annotation for self in a class method
    "ANN101",
    # Missing type annotation for a class attribute
    "ANN102",
    # Class attribute {name} is shadowing a python builtin (e.g., `id`)
    "A003",
    # Do not perform function call in argument defaults
    "B008",
    # 1 blank line required before class docstring
    "D203",
    # 1 blank line required between summary line and description
    "D205",
    # Multi-line docstring summary should start at the second line
    "D213",
    # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLR2004",
    # Too many arguments to function call
    "PLR0913",
    # Too many branches
    "PLR0912",
    # Too many statements
    "PLR0915",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
known-first-party = ["tg_odesli_bot", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
